--- a/package.json
+++ b/package.json
@@ -1,75 +1,70 @@
 {
   "name": "Toxic-MD",
-  "version": "2.0.0",
-  "description": "A simple baileys powered WhatsApp bot multidevice",
-  "main": "toxic.js",
+  "version": "10.8.1",
+  "description": "Toxic-MD multi device whatsapp bot",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "node index.js",
-    "s": "node toxic.js",
-    "toxictech": "pm2 start toxic.js --attach",
-    "c": "tsc"
+    "start": "pm2 start index.js --deep-monitoring --attach --name TOXIC-MD",
+    "stop": "pm2 stop TOXIC-MD",
+    "restart": "pm2 restart TOXIC-MD"
   },
-  "keywords": [
-    "toxicmdbot",
-    "freewhatsappbot",
-    "botwhatsapp",
-    "Toxic-MD",
-    "toxicmd",
-    "wabot",
-    "toxicmultidevice",
-    "whatsappbot",
-    "Toxic-Bot"
-  ],
+  "keywords": ["Toxic-MD", "whatsapp-bot", "whatsapp md bot"],
   "author": "xhclinton",
   "license": "ISC",
   "dependencies": {
-    "@adiwajshing/keyed-db": "^0.2.4",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
-    "@types/node": "^18.0.6",
-    "@whiskeysockets/baileys": "github:xhclintohn/Baileys",
+    "whiskeysockets/baileys": "github:xhclintohn/Baileys",
     "@xaviabot/fb-downloader": "^1.0.14",
+    "acrcloud": "^1.4.0",
+    "api-dylux": "^1.8.3",
     "aptoide-scraper": "^1.0.1",
-    "axios": "^1.4.0",
-    "cache-manager": "latest",
-    "canvacord": "^5.4.8",
-    "chal": "^0.0.1-security.0",
+    "awesome-phonenumber": "^6.8.0",
+    "axios": "^1.6.8",
     "chalk": "^5.3.0",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.3.1",
+    "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
-    "file-type": "16.5.3",
-    "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
-    "fs-extra": "^11.1.1",
-    "g-i-s": "^2.1.7",
-    "gist": "^0.2.0",
-    "genius-lyrics": "^4.4.3",
+    "file-type": "^19.0.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "megajs": "^1.1.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "gifted-dls": "^1.3.0",
     "google-it": "^1.6.4",
-    "google-tts-api": "latest",
-    "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
-    "javascript-obfuscator": "^4.1.0",
     "jimp": "^0.22.12",
-    "latest": "^0.2.0",
-    "link-preview-js": "^3.0.4",
-    "moment-timezone": "^0.5.43",
-    "mongoose": "^8.0.3",
-    "mumaker": "^2.0.0",
+    "jpeg-js": "^0.4.4",
+    "jsqr": "^1.4.0",
+    "luxon": "^3.4.4",
+    "libphonenumber": "^0.0.10",
+    "moment-timezone": "^0.5.45",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
-    "node-fetch": "^3.2.6",
-    "node-id3": "^0.2.6",
-    "pg": "^8.11.2",
-    "pino": "^8.15.0",
+    "node-fetch": "^3.3.2",
+    "node-os-utils": "^1.3.7",
+    "node-webpmux": "^3.2.0",
+    "os": "^0.1.2",
+    "pdfkit": "^0.15.0",
+    "pino": "^8.20.0",
+    "pm2": "^6.0.5",
+    "proto": "^1.0.19",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
-    "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6",
-    "translatte": "^3.0.1",
-    "types": "^0.1.1",
-    "typescript": "^5.1.6",
-    "wa-sticker-formatter": "^4.4.4",
-    "youtube-yts": "^2.0.0",
-    "yt-search": "^2.10.4",
-    "youtubedl-core": "^4.11.7"
+    "remove.bg": "^1.3.0",
+    "adm-zip": "^0.5.16",
+    "stream": "^0.0.3",
+    "tesseract.js": "^5.1.0",
+    "translate-google-api": "^1.0.4",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
+    "uuid": "^9.0.1",
+    "wasitech": "npm:@distube/ytdl-core",
+    "yt-search": "^2.11.0"
   }
 }
